// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders the structure correctly 1`] = `
<div
  aria-label="Test"
  class="th"
  role="columnheader"
  style="cursor:unset"
  title="Test"
>
  <div
    class="column-container"
  >
    <div
      class="column-header"
    >
      <span>
        Test
      </span>
    </div>
  </div>
</div>
`;

exports[`Header renders the structure correctly when draggable 1`] = `
<div
  aria-label="Test"
  class="th"
  role="columnheader"
  style="cursor:unset"
  title="Test"
>
  <div
    class="column-container"
    draggable="true"
  >
    <div
      class="column-header"
    >
      <span>
        Test
      </span>
    </div>
  </div>
</div>
`;

exports[`Header renders the structure correctly when filterable with custom classes 1`] = `
<div
  aria-label="Test"
  class="th"
  role="columnheader"
  style="cursor:unset"
  title="Test"
>
  <div
    class="column-container"
  >
    <div
      class="column-header my-custom-class"
    >
      <span>
        Test
      </span>
    </div>
  </div>
</div>
`;

exports[`Header renders the structure correctly when filterable with custom filter 1`] = `
<div
  aria-label="Test"
  class="th"
  role="columnheader"
  style="cursor:unset"
  title="Test"
>
  <div
    class="column-container"
  >
    <div
      class="column-header"
    >
      <span>
        Test
      </span>
    </div>
    <div>
      <label>
        Date picker filter
      </label>
      <input
        type="date"
      />
    </div>
  </div>
</div>
`;

exports[`Header renders the structure correctly when filterable with no custom filter 1`] = `
<div
  aria-label="Test"
  class="th"
  role="columnheader"
  style="cursor:unset"
  title="Test"
>
  <div
    class="column-container"
  >
    <div
      class="column-header"
    >
      <span>
        Test
      </span>
    </div>
  </div>
</div>
`;

exports[`Header renders the structure correctly when is hidden and preview 1`] = `
<div
  aria-label="Test"
  class="th hidden-column-preview"
  role="columnheader"
  style="cursor:unset"
  title="Test"
>
  <div
    class="column-container"
  >
    <div
      class="column-header"
    >
      <span>
        Test
      </span>
    </div>
  </div>
</div>
`;

exports[`Header renders the structure correctly when resizable 1`] = `
<div
  aria-label="Test"
  class="th"
  role="columnheader"
  style="cursor:unset"
  title="Test"
>
  <div
    class="column-container"
  >
    <div
      class="column-header"
    >
      <span>
        Test
      </span>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="column-resizer"
  >
    <div
      class="column-resizer-bar"
    />
  </div>
</div>
`;

exports[`Header renders the structure correctly when sortable 1`] = `
<div
  aria-label="Test"
  aria-sort="none"
  class="th"
  role="columnheader"
  title="Test"
>
  <div
    class="column-container"
  >
    <div
      class="column-header clickable"
      role="button"
      tabindex="0"
    >
      <span>
        Test
      </span>
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-arrows-alt-v fa-w-8"
        data-icon="arrows-alt-v"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 256 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Header renders the structure correctly when value is empty 1`] = `
<div
  aria-label=""
  class="th"
  role="columnheader"
  style="cursor:unset"
  title=""
>
  <div
    class="column-container"
  >
    <div
      class="column-header"
    >
      <span>
         
      </span>
    </div>
  </div>
</div>
`;
